--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -1,4 +1,4 @@
-\chapter{Mechanical softening in Ferroelectric domain walls}
+\chapter{Mechanical softening in Ferroelectric domain walls \label{ch:Softening}}
 
 
 \section{Introduction}
