--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -204,16 +204,16 @@ This allows us to predict the sequence of optical pulses to be applied to the ma
 And finally, the coupling between ferroelectricity and strain in BaTiO$_3$ leads to a softening at purely ferroelectric domain walls, allowing for some mechanical control of the position of this wall.
 
 We utilize both theoretical and computational tools to understand the nature of these interactions, how they lead to cross-order coupling in these materials, and how this ultimately translates into the experimentally observed behavior.
-% \chapter*{Acknowledgements}
-% \Include{Publications}
+\chapter*{Acknowledgements}
+\Include{Publications}
 \setcounter{tocdepth}{1}
 \tableofcontents
 \mainmatter
 % \Include{Introduction}
 % \Include{Theory}
 % \Include{Rashba}
-\Include{GdMn2O5}
-% \Include{Cr}
+% \Include{GdMn2O5}
+\Include{Cr}
 % \Include{Softening}
 \backmatter
 \bibliography{references}
