Updates from Overleaf

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -93,7 +93,7 @@ We utilize both theoretical and computational tools to understand the nature of 
 % % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
-% \Include{GdMn2O5}
+\Include{GdMn2O5}
 % \Include{Softening}
 \Include{Cr}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
