--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -368,6 +368,20 @@ It is extreme in the sense that it requires no tunneling whatsoever, which forms
 We now turn to a discussion of the results obtained from the simulations of the effective spin Hamiltonian Eq.~\eqref{eq:GdMn2O5_model}.
 
 \section{Results and discussion}
+\begin{figure}
+    \IncludeGraphics[width=0.9\linewidth]{Pb_3panels_heatmaps}
+    %\includegraphics[width=\linewidth]{fig/L1L2_heatmap.png}
+    \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behaviour.}
+    (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for various magnetic field orientations. 
+   In each panel, the changes of the curve color indicate the same progression of the sweep cycle as Fig~\ref{fig:GdMn2O5_experiment1}. The four-state switching is seen for the field at the magic orientation. 
+    The insets indicate the corresponding switching paths and winding numbers.
+    (d-f) Trajectories (in green) in the space of the N\'eel vectors orientations, $(\phi_{\rm L_1},\phi_{\rm L_2})$, through the field sweep cycles in different regimes. The color map shows the energy landscape in the vicinity of the switching fields. 
+}
+\end{figure}
+
+
+
+
 
 As mentioned above, the low temperature commensurate state breaks both time reversal symmetry, $T: (\bm{L}_1, \bm{L}_2) \rightarrow (-\bm{L}_1, -\bm{L}_2)$, and inversion symmetry $I:(\bm{L}_1, \bm{L}_2) \rightarrow (-\bm{L}_1, \bm{L}_2)$.
 This leads to fourfold degenerate energy surfaces in terms of the angles $\phi_{L_1}$ and $\phi_{L_2}$ as shown for different field strengths at $\phi_{\rm H} = 10^\circ$ in Fig.~\ref{fig:GdMn2O5_heatmap}.
@@ -409,16 +423,6 @@ The background energy surfaces are chosen to reflect how the barriers at an inte
 Our model thus reproduces the experimentally observed four-state switching around the magic angle, $\phi_{\rm H}^\ast  = 10^\circ$, (Fig.~\ref{fig:GdMn2O5_theory}(b)) and the switching between states 1 and 2 with close values of $P_b$ for $\phi_{\rm H} > \phi_{\rm H}^\ast$  (Fig.~\ref{fig:GdMn2O5_theory}(c)).
 For small $\phi_{\rm H}$, as mentioned before, our simulations show the transition between states 1 and 4 accompanied by the polarization reversal (Fig.~\ref{fig:GdMn2O5_theory}(a)), similar to the behavior in Ref.~\cite{Lee13}, instead of the observed $1\leftrightarrow2$ switching of Fig.~\ref{fig:GdMn2O5_experiment1}(a). 
 This discrepancy may be related to a thermally activated transition between states 1 and 2, which are closer in the order-parameter space than states 1 and 4.
-\begin{figure}[b!]
-    \IncludeGraphics[width=0.9\linewidth]{Pb_3panels_heatmaps}
-    %\includegraphics[width=\linewidth]{fig/L1L2_heatmap.png}
-    \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behaviour.}
-    (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for various magnetic field orientations. 
-   In each panel, the changes of the curve color indicate the same progression of the sweep cycle as Fig~\ref{fig:GdMn2O5_experiment1}. The four-state switching is seen for the field at the magic orientation. 
-    The insets indicate the corresponding switching paths and winding numbers.
-    (d-f) Trajectories (in green) in the space of the N\'eel vectors orientations, $(\phi_{\rm L_1},\phi_{\rm L_2})$, through the field sweep cycles in different regimes. The color map shows the energy landscape in the vicinity of the switching fields. 
-}
-\end{figure}
 
 The magic angle region for this set of model parameters is relatively narrow, about 0.5$^\circ$, whereas in the experimental measurements it is found to be 5$^\circ$ wide.
 However, by tuning the model parameters both the width and positioning of the ``magic'' angle region can be changed.
